focos em botões

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </div>
 
         <div class="content-area" id="main-content" tabindex="-1">
-            <div id="text-editor" class="app-container hidden">
+            <div id="text-editor-app" class="app-container hidden">
                 <h2>📝 Editor de Texto</h2>
                 <textarea id="text-area" class="text-input scannable" rows="10"
                     placeholder="Digite seu texto aqui... Use TAB para navegar pelos botões abaixo." tabindex="12"
@@ -76,7 +76,7 @@
                     aria-label="Ler texto em voz alta">🔊 Ler Texto</button>
             </div>
 
-            <div id="file-manager" class="app-container hidden">
+            <div id="file-manager-app" class="app-container hidden">
                 <h2>📁 Gerenciador de Arquivos</h2>
                 <div class="file-actions">
                     <input type="file" id="file-input" class="hidden" accept=".txt">
@@ -130,7 +130,7 @@
                 </div>
             </div>
 
-            <div id="site-launcher" class="app-container hidden">
+            <div id="site-launcher-app" class="app-container hidden">
                 <h2>🌐 Sites Seguros</h2>
                 <p class="launcher-description">Clique em um dos sites abaixo para abrir em uma nova janela de forma
                     segura:</p>
@@ -178,7 +178,7 @@
                 </div>
             </div>
 
-            <div id="media-player" class="app-container hidden">
+            <div id="media-player-app" class="app-container hidden">
                 <h2>🎵 Reprodutor de Mídia</h2>
                 <div class="media-controls">
                     <input type="file" id="media-input" class="hidden" accept="audio/*,video/*">
@@ -192,7 +192,7 @@
                 <div id="media-info" class="media-info" aria-live="polite"></div>
             </div>
 
-            <div id="pdf-reader" class="app-container hidden">
+            <div id="pdf-reader-app" class="app-container hidden">
                 <h2>📄 Leitor de PDF</h2>
                 <div class="pdf-controls">
                     <input type="file" id="pdf-input" class="hidden" accept=".pdf">
@@ -213,7 +213,7 @@
                 <div id="pdf-info" class="pdf-info" aria-live="polite">Página 0 de 0</div>
             </div>
 
-            <div id="communication-aid" class="app-container hidden">
+            <div id="communication-aid-app" class="app-container hidden">
                 <h2>💬 Comunicação Alternativa</h2>
                 <div class="communication-output">
                     <div id="communication-display" class="communication-display" aria-live="polite">
@@ -238,7 +238,7 @@
                 </div>
             </div>
 
-            <div id="email-integration" class="app-container hidden">
+            <div id="email-integration-app" class="app-container hidden">
                 <h2>✉️ Integração de E-mail</h2>
                 <div class="email-options">
                     <button class="action-button scannable" onclick="openGmail()" tabindex="31"
@@ -259,7 +259,7 @@
                 </div>
             </div>
 
-            <div id="accessibility-settings" class="app-container hidden">
+            <div id="accessibility-settings-app" class="app-container hidden">
                 <h2>⚙️ Configurações de Acessibilidade</h2>
                 <div class="settings-section">
                     <label class="settings-label">Tamanho da Fonte:</label>
@@ -315,7 +315,7 @@
                 </div>
             </div>
 
-            <div id="help" class="app-container hidden">
+            <div id="help-app" class="app-container hidden">
                 <h2>❓ Central de Ajuda</h2>
                 <div class="help-content">
                     <div class="help-section">
