Atalhos das Novas Funcionalidades

--- a/index.html
+++ b/index.html
@@ -311,6 +311,41 @@
                             <input type="text" class="shortcut-input" id="shortcut-calc" maxlength="2" value="3"
                                 aria-label="Atalho para Calculadora">
                         </div>
+                        <div class="shortcut-item">
+                            <label>Sites Seguros:</label>
+                            <input type="text" class="shortcut-input" id="shortcut-site" maxlength="2" value="4"
+                                aria-label="Atalho para Sites Seguros">
+                        </div>
+                        <div class="shortcut-item">
+                            <label>Reprodutor de Mídia:</label>
+                            <input type="text" class="shortcut-input" id="shortcut-media" maxlength="2" value="5"
+                                aria-label="Atalho para Reprodutor de Mídia">
+                        </div>
+                        <div class="shortcut-item">
+                            <label>Leitor de PDF:</label>
+                            <input type="text" class="shortcut-input" id="shortcut-pdf" maxlength="2" value="6"
+                                aria-label="Atalho para Leitor de PDF">
+                        </div>
+                        <div class="shortcut-item">
+                            <label>Comunicação Alternativa:</label>
+                            <input type="text" class="shortcut-input" id="shortcut-comm" maxlength="2" value="7"
+                                aria-label="Atalho para Comunicação Alternativa">
+                        </div>
+                        <div class="shortcut-item">
+                            <label>Integração de E-mail:</label>
+                            <input type="text" class="shortcut-input" id="shortcut-email" maxlength="2" value="8"
+                                aria-label="Atalho para Integração de E-mail">
+                        </div>
+                        <div class="shortcut-item">
+                            <label>Configurações:</label>
+                            <input type="text" class="shortcut-input" id="shortcut-conf" maxlength="2" value="9"
+                                aria-label="Atalho para Configurações de Acessibilidade">
+                        </div>
+                        <div class="shortcut-item">
+                            <label>Ajuda:</label>
+                            <input type="text" class="shortcut-input" id="shortcut-help" maxlength="2" value="10"
+                                aria-label="Atalho para Central de Ajuda">
+                        </div>
                     </div>
                     <button class="action-button scannable" onclick="saveShortcuts()" tabindex="46"
                         aria-label="Salvar atalhos personalizados">💾 Salvar Atalhos</button>
